# f1-dash

./: Cargo.toml  README.md  SETUP.md  docker-bake.hcl  dockerfile
.k8s/: deployment.yaml
api/: Cargo.toml
dash/: package.json
dashboard/: dockerfile  package.json
dashboard/src/app/: layout.tsx
dashboard/src/app/dashboard/track-map/: page.tsx
dashboard/src/components/analytics/: AnalyticsBootstrap.tsx
dashboard/src/components/dashboard/: LeaderBoard.tsx  Map.tsx
dashboard/src/components/driver/: DriverMiniSectors.tsx
realtime/: Cargo.toml
realtime/src/: f1.rs  http_server.rs  main.rs  signalr.rs
simulator/: Cargo.toml
simulator/src/: save.rs
